After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 595491 - Fix clang bugs
Fix clang bugs
Status: RESOLVED FIXED
Product: gnome-media
Classification: Deprecated
Component: gnome-volume-control
unspecified
Other All
: Normal normal
: ---
Assigned To: gnome media maintainers
gnome media maintainers
Depends on:
Blocks:
 
 
Reported: 2009-09-17 17:26 UTC by Bastien Nocera
Modified: 2009-09-21 14:43 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Remove unused variables in gvc_balance_bar_constructor (1.23 KB, patch)
2009-09-17 17:26 UTC, Bastien Nocera
committed Details | Review
Remove unused variable in gvc_level_bar_constructor (1.21 KB, patch)
2009-09-17 17:26 UTC, Bastien Nocera
committed Details | Review
Remove unused num_settings variable in update_output_settings (1.96 KB, patch)
2009-09-17 17:26 UTC, Bastien Nocera
committed Details | Review
Remove unused variable from bar_calc_layout (1.69 KB, patch)
2009-09-17 17:26 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2009-09-17 17:26:39 UTC
Fix a few bugs discovered with clang.
Comment 1 Bastien Nocera 2009-09-17 17:26:43 UTC
Created attachment 143381 [details] [review]
Remove unused variables in gvc_balance_bar_constructor
Comment 2 Bastien Nocera 2009-09-17 17:26:46 UTC
Created attachment 143382 [details] [review]
Remove unused variable in gvc_level_bar_constructor
Comment 3 Bastien Nocera 2009-09-17 17:26:50 UTC
Created attachment 143383 [details] [review]
Remove unused num_settings variable in update_output_settings
Comment 4 Bastien Nocera 2009-09-17 17:26:53 UTC
Created attachment 143384 [details] [review]
Remove unused variable from bar_calc_layout
Comment 5 Bastien Nocera 2009-09-21 14:43:42 UTC
Attachment 143381 [details] pushed as e6cc867 - Remove unused variables in gvc_balance_bar_constructor
Attachment 143382 [details] pushed as 2d885bb - Remove unused variable in gvc_level_bar_constructor
Attachment 143383 [details] pushed as 85a6b8e - Remove unused num_settings variable in update_output_settings
Attachment 143384 [details] pushed as 9ee2503 - Remove unused variable from bar_calc_layout