Remove unused variables in gvc_balance_bar_constructor

https://bugzilla.gnome.org/show_bug.cgi?id=595491